Solve Java know the Python modules